--- a/rizz.html
+++ b/rizz.html
@@ -68,63 +68,6 @@
         <button onclick="generateLine()">Generate</button>
     </div>
 
-    <script>
-        const lines = [
-            "Are you a magician? Because whenever I look at you, everyone else disappears.",
-            "Do you have a map? Because I just got lost in your eyes.",
-            "Are you a time traveler? Because I see you in my future.",
-            "Is your name Google? Because you have everything I’m searching for.",
-            "Do you have a Band-Aid? Because I just scraped my knee falling for you.",
-            "Are you a campfire? Because you’re hot and I want s’more.",
-            "Is your dad an artist? Because you’re a masterpiece.",
-            "Do you believe in love at first sight, or should I walk by again?",
-            "Are you French? Because Eiffel for you.",
-            "Do you have a sunbeam? Because you just brightened my day.",
-            "Are you made of copper and tellurium? Because you’re Cu-Te.",
-            "If you were a vegetable, you’d be a cute-cumber!",
-            "Do you have a pencil? Because I want to erase your past and write our future.",
-            "Is your name Wi-Fi? Because I’m really feeling a connection.",
-            "Are you a parking ticket? Because you’ve got FINE written all over you.",
-            "Are you a loan from a bank? Because you have my interest!",
-            "Is it okay if I follow you home? Cause my parents always told me to follow my dreams.",
-            "Are you a keyboard? Because you’re just my type.",
-            "If beauty were time, you’d be an eternity.",
-            "Are you an alien? Because you’ve just abducted my heart.",
-            "Are you the ocean? Because I’m lost at sea.",
-            "Do you have a name, or can I call you mine?",
-            "If kisses were snowflakes, I’d send you a blizzard.",
-            "Is your name Chapstick? Because you’re da balm!",
-            "Are you the square root of -1? Because you can’t be real.",
-            "Do you like raisins? How about a date?",
-            "If you were a fruit, you’d be a fineapple.",
-            "Are you the sun? Because you light up my day.",
-            "Are you an artist? Because you just drew me in.",
-            "You must be tired because you’ve been running through my mind all day.",
-            "Are you from Tennessee? Because you’re the only ten I see.",
-            "Did it hurt when you fell from heaven?",
-            "If beauty were a crime, you’d be serving a life sentence.",
-            "Are you a star? Because your beauty lights up the night.",
-            "Are you a photographer? Because I picture us together.",
-            "Are you a dictionary? Because you add meaning to my life.",
-            "Are you a snowstorm? Because you make my heart race.",
-            "Are you a battery? Because you’ve got a positive charge!",
-            "Is your name Sunshine? Because you brighten up my life.",
-            "Are you a cloud? Because you’re so dreamy.",
-            "Are you Cinderella? Because I see that dress coming off at midnight.",
-            "Are you a magnet? Because I’m attracted to you.",
-            "Are you fire? Because you’re hot and I can’t resist.",
-            "Is your aura glowing, or are you just always this beautiful?",
-            "Are you a lighthouse? Because you guide me home.",
-            "Are you chocolate? Because you’re sweet and irresistible.",
-            "Are you the wind? Because you’ve blown me away.",
-            "Are you an eclipse? Because you make everything else disappear.",
-            "Are you a sunflower? Because you brighten my darkest days."
-        ];
-
-        function generateLine() {
-            const randomIndex = Math.floor(Math.random() * lines.length);
-            document.getElementById('line').textContent = lines[randomIndex];
-        }
-    </script>
+    <script defer src="/cdn/rizz.js"></script>
 </body>
 </html>
