--- a/staff/kar.html
+++ b/staff/kar.html
@@ -1,25 +1,83 @@
-<html>
-  <head>
-    <title>Hi, i'm Kar!</title>
-  </head>
-  <style>
-  @font-face{font-family:ReadexPro;src:url(/fonts/ReadexPro.ttf);font-weight:400;font-style:normal;font-display:swap}@font-face{font-family:ReadexProL;src:url(/fonts/ReadexPro-ExtraLight.ttf);font-weight:400;font-style:normal;font-display:swap}html{background-color:#090500;font-family:ReadexProL}body{margin:auto;width:100%;height:100vh;line-height:1;display:flex;align-items:center}*{box-sizing:border-box}p{color:#f0f8ff;margin:1rem 0;line-height:normal;font-size:large}.textarea{height:fit-content;width:fit-content}h1{font-weight:500;color:#f0f8ff;margin:1rem 0;font-size:4rem;font-weight:900}h2{color:#f0f8ff7c;margin:1rem 0;line-height:normal;font-size:large;font-weight:500}.box{width:510px;height:50px;border:1px solid rgba(240,248,255,.242);background-color:#ffffff08;padding:10px;margin:5px;display:flex;align-items:center;align-self:center;font-family:ReadexProL;border-radius:8px;font-size:20px;color:#ffffff86}.forground{width:540px;height:fit-content;padding:20px;margin:auto;display:flex;flex-direction:column;border-radius:8px;color:#f0f8ff;align-self:center}.button{width:510px;height:50px;background-color:#f9c23c;padding:10px;margin:5px;display:flex;align-items:center;align-self:center;font-family:ReadexPro;font-size:20px;text-decoration:none;color:#070213}.horizontalgap{float:left;overflow:hidden;height:1px;width:0px}.header{width:fit-content;height:fit-content;display:flex;flex-direction:row;margin-bottom:10px}
-  </style>
-  <body>
-    <div class="forground"><a class="header"><img src="/PfpIcon 1.png" style="width:100px;height:100px;"><div class="horizontalgap" style="width:15px"></div><h1>Kar</h1></a><div class="box">About Me</div><div class="textarea"><p>Hello, my name is Sparkk!</p>
-      <h2>
-                I am a scripter, graphic designer, bad clothing designer,
-                coolest person, better thean you (btw), not weird (trust), and
-                game developer
-      </h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Montserrat', sans-serif;
+            background: url('https://media.wbur.org/wp/2022/07/main_image_star-forming_region_carina_nircam_final-5mb.jpeg') no-repeat center center fixed;
+            background-size: cover;
+            color: white;
+        }
+
+        .container {
+            text-align: center;
+            padding: 50px 20px;
+        }
+
+        h1 {
+            font-size: 3rem;
+            margin-bottom: 10px;
+            color: yellow;
+        }
+
+        p {
+            font-size: 1.2rem;
+            margin-bottom: 30px;
+        }
+
+        .button-group {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            flex-wrap: wrap;
+        }
+
+        .button {
+            display: inline-block;
+            padding: 15px 30px;
+            font-size: 1rem;
+            font-weight: bold;
+            color: black;
+            background-color: yellow;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .button:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 15px rgba(255, 255, 0, 0.5);
+        }
+
+        footer {
+            margin-top: 50px;
+            font-size: 0.9rem;
+            color: white;
+            text-shadow: 1px 1px 3px black;
+        }
+
+    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+</head>
+<body>
+    <div class="container">
+        <h1>Kar</h1>
+        <p>hi! I'm Kar I am learning Python and CSS! However, I know discord.js, js, HTML, Luaa.</p>
+        
+        <div class="button-group">
+            <a href="https://github.com/kar-the-dev" class="button">GitHub</a>
+            <a href="https://x.com/Kar___7" class="button">Twitter</a>
+            <a href="https://guns.lol/kar7" class="button">Guns.lol/a>
+        </div>
     </div>
-      <a class="button" href="https://example.com">PLUH</a>
-      <a class="button" href="https://example.com">PLUH</a>
-    </div>
-  </body>
-  <style>
-      @font-face{font-family:FigtreeVF;src:url(chrome-extension://majdfhpaihoncoakbjgbdhglocklcgno/fonts/FigtreeVF.woff2) 
-      format("woff2 supports variations"),url(chrome-extension://majdfhpaihoncoakbjgbdhglocklcgno/fonts/FigtreeVF.woff2) 
-      format("woff2-variations");font-weight:100 1000;font-display:swap}
-  </style>
+
+    <footer>
+        Kar - Nebular Games Co-Founder
+    </footer>
+</body>
 </html>
