--- a/staff/kar.html
+++ b/staff/kar.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             font-family: 'Montserrat', sans-serif;
-            background: url('https://source.unsplash.com/1920x1080/?space') no-repeat center center fixed;
+            background: url('media.wbur.org/wp/2022/07/main_image_star-forming_region_carina_nircam_final-5mb.jpeg') no-repeat center center fixed;
             background-size: cover;
             color: white;
             display: flex;
