--- a/shader.html
+++ b/shader.html
@@ -13,10 +13,10 @@
     <div class="gradient-container" id="gradientBox"></div>
 
     <div class="controls">
-        <label for="color1">Color 1:</label>
+        <label for="color1">Gradient 1:</label>
         <input type="color" id="color1" value="#ff758c">
 
-        <label for="color2">Color 2:</label>
+        <label for="color2">Gradient 2:</label>
         <input type="color" id="color2" value="#ff7eb3">
 
         <button onclick="updateGradient()">Generate Gradient</button>
@@ -25,7 +25,7 @@
     <div class="css-code" id="cssCode">background: radial-gradient(circle, #ff758c, #ff7eb3);</div>
 
     <div class="footer">
-        Made with ❤️ by <a href="https://yourwebsite.com" target="_blank">YourWebsite</a>
+        Made with ❤️ by Kar
     </div>
 
     <script src="/cdn/shader.js"></script>
