--- a/shader.html
+++ b/shader.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kars shader maker</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/cdn/shader.css">
 </head>
 <body>
 
@@ -34,7 +34,7 @@
         Made with ❤️ by Kar
     </div>
 
-    <script src="script.js"></script>
+    <script src="cdn/shader.js"></script>
 
 </body>
 </html>
